# 2024-cpp-autumn

./: .gitignore  README.md
HomeWork-1-08.10.2024/: README.md  main.cpp  makefile
HomeWork-1-08.10.2024/src/: main.cpp  txt-editor.cpp  txt-editor.h
HomeWork-2-31.10.2024/: README.md  makefile
HomeWork-2-31.10.2024/src/: Bank.h  BankAccount.h
HomeWork-3-14.10.2024/: README.md  makefile
HomeWork-3-14.10.2024/src/: Str-operator[].cpp  Str-operator[].h  main.cpp
HomeWork-4-05.11.2024/: CMakeLists.txt  README.md  main.cpp
HomeWork-4-05.11.2024/Bank_src/: Bank.cpp  Bank.h
HomeWork-4-05.11.2024/Text-editor_src/: txt-editor.cpp  txt-editor.h
HomeWork-4-05.11.2024/src/: Bank.h  BankAccount.cpp  main.cpp
HomeWork-5-05.11.2024/: README.md  makefile
HomeWork-5-05.11.2024/src/: Array[].h  Array_header.h  main.cpp
HomeWork_Project-1-17.11.2024/: HomeWork_Project-1  README.md  makefile
HomeWork_Project-1-17.11.2024/GoogleTestDataSet/: CMakeLists.txt  README.md  main.cpp
HomeWork_Project-1-17.11.2024/data_set_file/: file1.txt  file2.txt  file3.txt  file4.txt
HomeWork_Project-1-17.11.2024/src/: BiLinkedList.cpp  BiLinkedList.h  BiNode.cpp  BiNode.h  DataType.h  Dataset.cpp  Dataset.h  main.cpp
